--- a/vue-bothSide.html
+++ b/vue-bothSide.html
@@ -5,15 +5,20 @@
 	<title>Document</title>
 </head>
 <body>
-	<!-- hello world -->
-	<div id="app">
-		{{message}}
-	</div>
 
-	<!-- 双向数据绑定 -->
-	<div id="app2">
+	<!-- 渲染列表 -->
+	<div id="app">
+  		<ul>
+    		<li v-for="todo in todos">
+      			{{ todo.text }}
+    		</li>
+ 		</ul>
+	</div>
+		
+	<!-- 处理用户输入 -->
+	<div id="app1">
 		<p>{{ message }}</p>
-		<input v-model="message">
+		<button v-on:click="reverseMessage">Reverse Message</button>
 	</div>
 </body>
 <script src="vuejs/vue.js"></script>
@@ -21,14 +26,23 @@
 	new Vue({
 		el: "#app",
 		data: {
-			message: "hello world!"
+			todos: [
+				{ text: '降龙十八掌' },
+				{ text: '九阳神功' },
+				{ text: '乾坤大挪移' }
+			]
 		}
 	})
 
 	new Vue({
-		el: "#app2",
+		el: "#app1",
 		data: {
-			message: "双向数据绑定！"
+			message: "Hello 徐先森！"
+		},
+		methods: {
+			reverseMessage: function(){
+				this.message = this.message.split('').reverse().join('');
+			}
 		}
 	})
 </script>
