--- a/vue-bothSide.html
+++ b/vue-bothSide.html
@@ -20,9 +20,23 @@
 		<p>{{ message }}</p>
 		<button v-on:click="reverseMessage">Reverse Message</button>
 	</div>
+	<br>
+	<!-- 绑定DOM元素属性 -->
+	<div id="app-2">
+		<span v-bind:title="message">
+			鼠标悬停几秒查看此处动态绑定的提示信息
+		</span>
+	</div>
 </body>
 <script src="vuejs/vue.js"></script>
 <script>
+	var app2 = new Vue({
+		el: "#app-2",
+		data:{
+			message: '页面加载于' + new Date()
+		}
+	})
+
 	new Vue({
 		el: "#app",
 		data: {
